fixed spacing for signupform and modals

--- a/frontend/src/Components/SignupFormModal/SignupForm.css
+++ b/frontend/src/Components/SignupFormModal/SignupForm.css
@@ -17,7 +17,7 @@
 .modal{
     justify-content: space-around;
     align-items: center;
-    width:50vh;
+    width:100%;
     height: 60vh;
     border: white;
     border-radius: 5px;
